Issue #148: Tweaks for better stability on local Vagrant environment.

--- a/k8s-manifests/drupal/mysql/manifest.yml
+++ b/k8s-manifests/drupal/mysql/manifest.yml
@@ -88,7 +88,7 @@ spec:
             cpu: '2'
             memory: '768Mi'
           requests:
-            cpu: '1'
+            cpu: '500m'
             memory: '512Mi'
       volumes:
       - name: mysql-persistent-storage
