Issue #151: Add the delegate_to back in for the cluster.

--- a/testing/presentation/ansible-encounters/main.yml
+++ b/testing/presentation/ansible-encounters/main.yml
@@ -12,20 +12,20 @@
   tasks:
     - name: G5
       command: blinkstick --blink --duration=1000 pink
-      # delegate_to: kube1
+      delegate_to: kube1
 
     - name: A5
       command: blinkstick --blink --duration=1000 orange
-      # delegate_to: kube2
+      delegate_to: kube2
 
     - name: F5
       command: blinkstick --blink --duration=1000 purple
-      # delegate_to: kube3
+      delegate_to: kube3
 
     - name: F4
       command: blinkstick --blink --duration=1000 yellow
-      # delegate_to: kube4
+      delegate_to: kube4
 
     - name: C5
       command: blinkstick --blink --duration=2000 white
-      # delegate_to: kube3
+      delegate_to: kube3
