Fix ansible-encounters script issue by adjusting blinkstick and whitelisting callback.

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -4,6 +4,7 @@ nocows = 1
 forks = 10
 retry_files_enabled = False
 stdout_callback = yaml
+callback_whitelist = tones
 bin_ansible_callbacks = True
 
 [ssh_connection]
