--- a/ansible.cfg
+++ b/ansible.cfg
@@ -5,7 +5,7 @@ forks = 10
 retry_files_enabled = False
 stdout_callback = yaml
 callback_whitelist = tones
-bin_ansible_callbacks = True
+bin_ansible_callbacks = False
 
 [ssh_connection]
 pipelining = True
