--- a/vars/main.yml
+++ b/vars/main.yml
@@ -1,19 +1,19 @@
 ---
 # Docker configuration.
-docker_install_from_convenience_script: True
+docker_install_compose: false
 docker_users:
   - pi
 
 # Kubernetes configuration.
-kubernetes_allow_pods_on_master: False
+kubernetes_allow_pods_on_master: false
 kubernetes_pod_network_cidr: '10.244.0.0/16'
-kubernetes_version: '1.13'
+kubernetes_version: '1.15'
 kubernetes_packages:
-  - name: kubelet=1.13.5-00
+  - name: kubelet=1.15.0-00
     state: present
-  - name: kubectl=1.13.5-00
+  - name: kubectl=1.15.0-00
     state: present
-  - name: kubeadm=1.13.5-00
+  - name: kubeadm=1.15.0-00
     state: present
   - name: kubernetes-cni
     state: present
@@ -41,7 +41,7 @@ pip_install_packages:
 
 # Swap configuration.
 swap_file_state: absent
-swap_file_path: /dev/mapper/packer--debian--9--amd64--vg-swap_1
+swap_file_path: /dev/mapper/packer--debian--10--amd64--vg-swap_1
 
 # See: https://github.com/docker-library/mysql/issues/318
 mysql_container_image: hypriot/rpi-mysql:5.5
@@ -50,7 +50,7 @@ mysql_container_image: hypriot/rpi-mysql:5.5
 traefik_image: traefik:1.7
 
 # Image to use for the metrics-server deployment.
-metrics_server_image: gcr.io/google_containers/metrics-server-arm:v0.3.1
+metrics_server_image: gcr.io/google_containers/metrics-server-arm:v0.3.2
 
 # Image to use for nfs-client deployment.
 nfs_client_image: quay.io/external_storage/nfs-client-provisioner-arm:latest
