--- a/example.config.yml
+++ b/example.config.yml
@@ -27,3 +27,6 @@ docker_registry_http_secret: fdb19409c851605cd6c46615888d4c0e37858121df7c
 # LED Configuration.
 led_enable_gpio: false
 led_enable_blinkstick: false
+
+# Time Configuration.
+timezone: "America/New_York"
