--- a/setup/networking/example.vars.yml
+++ b/setup/networking/example.vars.yml
@@ -16,5 +16,7 @@ mac_address_mapping:
 
 # Nameservers to use in resolv.conf.
 dns_nameservers:
-  - "8.8.8.8"
-  - "8.8.4.4"
+  - "1.1.1.1"
+  - "1.0.0.1"
+
+default_gateway: 10.0.100.1
