--- a/k8s-manifests/drupal/drupal/manifest.yml
+++ b/k8s-manifests/drupal/drupal/manifest.yml
@@ -11,6 +11,7 @@ data:
   DRUPAL_DATABASE_USERNAME: 'drupal'
   DRUPAL_HASH_SALT: '{{ drupal_hash_salt }}'
   DRUPAL_DOWNLOAD_IF_NOT_PRESENT: '{{ drupal_download_if_not_present }}'
+  DRUPAL_DOWNLOAD_VERIFY_CERT: 'false'
 
 # PersistentVolumeClaim for Drupal files.
 ---
