Another attempt at getting Travis happy with after_failure.

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,4 @@ script:
   - ./testing/docker/docker-playbook-test.sh
 
 after_failure:
-  - >
-    docker exec --tty dramble env TERM=xterm \
-    journalctl --no-pager -u kubelet
+  - docker exec --tty dramble env TERM=xterm journalctl --no-pager -u kubelet
