--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,13 @@ addons:
     - registry.pidramble.test
     - kube1
 
+before_install:
+  # Install the latest Docker version on Travis CI.
+  - curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo apt-key add -
+  - sudo add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable"
+  - sudo apt-get update
+  - sudo apt-get -y -o Dpkg::Options::="--force-confnew" install docker-ce
+
 install:
   - docker pull geerlingguy/docker-debian10-ansible:latest
   - cp example.config.yml config.yml
