--- a/k8s-manifests/nfs/deployment/manifest.yml
+++ b/k8s-manifests/nfs/deployment/manifest.yml
@@ -1,7 +1,7 @@
 # NFS Deployment.
 ---
 kind: Deployment
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1
 metadata:
   name: nfs-client-provisioner
   namespace: default
@@ -9,6 +9,9 @@ spec:
   replicas: 1
   strategy:
     type: Recreate
+  selector:
+    matchLabels:
+      app: nfs-client-provisioner
   template:
     metadata:
       labels:
