--- a/ansible.cfg
+++ b/ansible.cfg
@@ -4,8 +4,8 @@ nocows = 1
 forks = 10
 retry_files_enabled = False
 stdout_callback = yaml
-callback_whitelist = tones
 bin_ansible_callbacks = False
+interpreter_python=auto_silent
 
 [ssh_connection]
 pipelining = True
