--- a/k8s-manifests/drupal/drupal/manifest.yml
+++ b/k8s-manifests/drupal/drupal/manifest.yml
@@ -33,7 +33,7 @@ spec:
 
 # Drupal Deployment definition.
 ---
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: drupal
@@ -113,7 +113,7 @@ spec:
 
 # Drupal Ingress.
 ---
-apiVersion: extensions/v1beta1
+apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: drupal-ingress
@@ -125,9 +125,12 @@ spec:
     http:
       paths:
       - path: /
+        pathType: Prefix
         backend:
-          serviceName: drupal
-          servicePort: 80
+          service:
+            name: drupal
+            port:
+              number: 80
 
 # Drupal Horizontal Pod Autoscaler.
 ---
