--- a/tasks/k8s-services.yml
+++ b/tasks/k8s-services.yml
@@ -7,32 +7,15 @@
   delegate_to: "{{ groups.dramble[0] }}"
   run_once: True
 
-- name: Ensure metrics-server directory exists.
-  file:
-    path: "~/metrics-server"
-    state: directory
+- name: Download metrics-server manifest to the cluster.
+  get_url:
+    url: https://github.com/kubernetes-sigs/metrics-server/releases/latest/download/components.yaml
+    dest: ~/metrics-server.yaml
+    mode: '0664'
 
-- name: Download the metrics-server project from GitHub.
-  unarchive:
-    src: https://github.com/kubernetes-sigs/metrics-server/archive/{{ metrics_server_version }}.tar.gz
-    dest: "~/metrics-server"
-    remote_src: yes
-    extra_opts: [ "--strip-components=1" ]
-    creates: "~/metrics-server/README.md"
-  register: metrics_server_download
-  run_once: True
-  delegate_to: "{{ groups.dramble[0] }}"
-
-- name: Overwrite metrics-server deployment manifest.
-  template:
-    src: k8s-manifests/kube-system/metrics-server-deployment.yaml
-    dest: "~/metrics-server/deploy/1.8+/metrics-server-deployment.yaml"
-  run_once: True
-  delegate_to: "{{ groups.dramble[0] }}"
-
-# TODO: This task should do an *apply* if the deployment task above was changed.
-- name: Apply metrics-server services to the cluster.
-  command: kubectl create -f ~/metrics-server/deploy/1.8+/
-  when: metrics_server_download is changed
+- name: Apply metrics-server manifest to the cluster.
+  k8s:
+    state: present
+    src: ~/metrics-server.yaml
   run_once: True
   delegate_to: "{{ groups.dramble[0] }}"
