Just point to the inventory file to avoid having to specify the inventory file

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -6,6 +6,7 @@ retry_files_enabled = False
 stdout_callback = yaml
 bin_ansible_callbacks = False
 interpreter_python=auto_silent
+inventory = inventory
 
 [ssh_connection]
 pipelining = True
